fix button alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,8 @@ footer ul li a {
 .copyright {
     padding: 10px;
 }
+
+.btn-json {
+    margin-left: 0px;
+    margin-right: 0px;
+}
